--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,10 @@
 .spoon__img {
   width: 45px;
 }
+.grass__img {
+  width: 30px;
+  margin-bottom: 0px;
+}
 
 @media screen and (min-width: 2000px) {
   .custom__button,
